--- a/SIGTR/dashboard/templates/dashboard/client/inicio.html
+++ b/SIGTR/dashboard/templates/dashboard/client/inicio.html
@@ -214,6 +214,8 @@
     <script src="{% static 'dashboard/js/clientes/asistenciaTecnica.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/historial.js' %}"></script>
     <script src="{% static 'dashboard/js/clientes/recomendaciones.js' %}"></script>
+    <script src="{% static 'dashboard/js/clientes/red.js' %}"></script>
+
 </body>
 
 </html>
