--- a/SIGTR/dashboard/static/dashboard/css/principal.css
+++ b/SIGTR/dashboard/static/dashboard/css/principal.css
@@ -80,28 +80,7 @@ body {
     color: green;
     font-size: 20px;
 }
-.botonAsist {
-    grid-area: botonAsist;
-    width: 100%;
-    justify-content: center;
-    gap: 20px;
-    display: flex;
-}
 
-.buttonAsist {
-    border-radius: 20px;
-    border: 1px solid skyblue;
-    background-color: rgb(3, 101, 140);
-    color: white;
-    padding: 10px;
-    box-shadow: 5px 10px 10px -3px rgb(1, 1, 1);
-    text-align: center;
-    display: grid;
-    grid-template-areas: "iconLogin textLogin";
-    grid-template-columns: auto;
-    width: 100%;
-    cursor: pointer;
-}
 .footer {
     grid-area: footer;
 }
@@ -237,10 +216,39 @@ body {
     text-shadow: 5px 1px 8px rgb(3, 101, 140);
     background: var(--fondoDiv);
 }
+.botonAsist {
+    grid-area: botonAsist;
+    width: 100%;
+    justify-content: center;
+    gap: 20px;
+    display: flex;
+}
 
+.buttonAsist {
+    border-radius: 20px;
+    border: 1px solid skyblue;
+    background-color: rgb(3, 101, 140);
+    color: white;
+    padding: 10px;
+    box-shadow: 5px 10px 10px -3px rgb(1, 1, 1);
+    text-align: center;
+    display: grid;
+    grid-template-areas: "iconLogin textLogin";
+    grid-template-columns: auto;
+    width: 100%;
+    cursor: pointer;
+}
+#cerrarSesion {
+    border: 1px solid white;
+    background-color: rgb(140, 12, 3);
+}
 .botonAsist button:hover {
     background: linear-gradient(180deg, rgb(54, 56, 57), rgb(29, 46, 46));
     color: rgb(3, 101, 140);
+}
+#cerrarSesion:hover {
+    background: linear-gradient(180deg, rgb(54, 56, 57), rgb(46, 29, 29));
+    color: rgb(140, 12, 3);
 }
 .datosDesktop {
     display: grid;
