--- a/SIGTR/dashboard/templates/dashboard/client/modalInicio.html
+++ b/SIGTR/dashboard/templates/dashboard/client/modalInicio.html
@@ -445,7 +445,7 @@
     </div>
 </div>
 
-<!--MODAL DE RED - VERSIÓN FINAL-->
+<!--MODAL DE RED -->
 <div id="modalComprobacionRed" class="modal">
     <div class="modal-content red-modal-content">
         <div class="headerModal">
